# pet-fullstack-fastapi-react-city-app

./: .gitignore  index.html
assets/: index--P_Qxxw9.js  index-B8x_bfub.css  index-BCXMZ-Oi.js  index-BH_UCFC-.js  index-BJEeXWWt.js  (+22 more)
backend/: .dockerignore  .env  Dockerfile  Makefile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2024_07_02_1709-8d6ed679dbf7_create_user_table.py  2024_07_03_2231-2d9a345123d6_remove_email.py  2024_07_06_1813-70adbc21d2aa_with_todos.py  2024_07_07_0631-8fef70ab7a5c_create_tabkes.py  2024_07_07_0813-63819d2579c8_create_tabkes.py
backend/docker/: app.sh
backend/src/: app_config.py  main.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/todo/: schemas.py  view.py
backend/src/auth/: __init__.py  auth_service.py  jwt_service.py
backend/src/auth/api/: crud.py  exceptions.py  schemas.py  utils.py  view.py
backend/src/auth/jwt_keys/: README.md
backend/src/db/: __init__.py  db_config.py  db_helper.py
backend/src/db/models/: __init__.py  _base.py  todo.py  user.py
backend/src/dependencies/: auth_dep.py  session_dep.py  todo_dep.py
backend/src/respositories/: __init__.py  _abc_repo.py  _sqlalchemy_repo.py
backend/src/services/: __init__.py  todo_service.py
backend/tests/: conftest.py  test_auth.py
backend/tests/test_todos/: conftest.py
backend/tests/tests_auth/: conftest.py  test_create_user.py  test_delete_user.py  test_jwt_payload.py  test_login.py  test_logout.py  test_register.py  test_update_user.py
(+38 files in other folders)
